--- a/frontend/src/style/Footer.css
+++ b/frontend/src/style/Footer.css
@@ -9,6 +9,9 @@ footer {
 .card-header {
   border: none;
 }
+.card-header img {
+	background: transparent;
+}
 
 .card-link {
   text-decoration: none;
