--- a/frontend/src/style/Navbar.css
+++ b/frontend/src/style/Navbar.css
@@ -19,6 +19,10 @@
     align-items: center;
 }
 
+.navbar-brand {
+	background: transparent;
+}
+
 .navbar-content li {
     list-style: none;
     margin: 0 10px;
